# AgentDraft

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  hatch_build.py  project_idea.md  pyproject.toml
.claude/: settings.json
.claude/skills/canvas-dev/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  publish-canvas.yml  publish-python.yml  publish-test-python.yml
canvas/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
canvas/e2e/: edit-save.spec.ts
canvas/src/: App.tsx  CallableField.test.tsx  CallableField.tsx  Editor.tsx  FileLoader.test.tsx  FileLoader.tsx  GraphCanvas.tsx  Inspector.test.tsx  Inspector.tsx  SchemaSidebar.test.tsx  SchemaSidebar.tsx  api.test.ts  api.ts  apiBase.test.ts  apiBase.ts  editorActions.test.ts  editorActions.ts  flowTypes.ts  index.css  layout.test.ts  layout.ts  main.tsx  types.test.ts  types.ts  vite-env.d.ts
canvas/src/edges/: SelfLoopEdge.tsx  selfLoopPath.test.ts  selfLoopPath.ts
canvas/src/nodes/: EndpointNode.tsx  SchemaNode.tsx
canvas/src/test/: setup.ts
docs/: ADRs.md  ARCHITECTURE.md  DATA-MODEL.md  GETTING_STARTED.md  OBSERVABILITY.md  PRD.md  README.md  ROADMAP.md
docs/requirements/: system-requirements.md
examples/: docs_qa.yaml  handlers.py  openai_docs_qa.yaml  routing.py  tools.py
src/agc/: __init__.py  cli.py  compiler.py  discovery.py  doctor.py  init.py  loader.py  observability.py  runs.py  schema.py  server.py  store.py  versions.py
src/agentdraft/: __init__.py  cli.py  compiler.py  discovery.py  doctor.py  evals.py  init.py  loader.py  observability.py  runs.py  schema.py  server.py  store.py  versions.py
tests/: conftest.py
tests/e2e/: test_canvas.py  test_doctor_cli.py  test_dotenv.py  test_eval_cli.py  test_examples.py  test_explain.py  test_init_cli.py  test_openai_docs_qa.py  test_run.py  test_runs_cli.py  test_schema_versions.py  test_validate.py
tests/fixtures/: checkpointed.yaml  checkpointed_multi_node.yaml  checkpointed_postgres.yaml  comprehensive.explain.json  comprehensive.explain.txt  comprehensive.yaml  evals_all_pass.yaml  evals_bad_schema_path.yaml  evals_basic.yaml  evals_missing_cases.yaml  evals_missing_schema.yaml  invalid_provider.yaml  multi_node.yaml  skeleton.yaml  tool_calling.yaml  unresolvable_handler.yaml
tests/support/: handlers.py  routing.py  tools.py
tests/unit/: test_compiler.py  test_discovery.py  test_doctor.py  test_evals.py  test_init.py  test_loader.py  test_observability.py  test_runs.py  test_schema.py  test_server.py  test_store.py  test_versions.py
