[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentdraft"
version = "0.1.0"
description = "A CLI- and canvas-first builder for AI agents on LangGraph."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2,<0.3",
    "langchain>=0.3,<0.4",
    "pydantic>=2,<3",
    "pyyaml>=6,<7",
    "click>=8,<9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    "types-PyYAML",
]

[project.scripts]
agentdraft = "agentdraft.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentdraft"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["agentdraft"]

[tool.pytest.ini_options]
testpaths = ["tests"]
