[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentdraft"
version = "0.1.0"
description = "A CLI- and canvas-first builder for AI agents on LangGraph."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2,<0.3",
    "langchain>=0.3,<0.4",
    "langgraph-checkpoint-sqlite>=2,<3",
    "pydantic>=2,<3",
    "pyyaml>=6,<7",
    "click>=8,<9",
    "python-dotenv>=1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    "types-PyYAML",
]
examples = [
    "langchain-anthropic>=0.3,<0.4",
    "langchain-openai>=0.3,<0.4",
]
postgres = [
    "langgraph-checkpoint-postgres>=2,<3",
    "psycopg[binary]>=3,<4",
]

[project.scripts]
agentdraft = "agentdraft.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentdraft"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["agentdraft"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["agentdraft"]

[tool.coverage.report]
fail_under = 99
exclude_lines = ["if __name__ == .__main__.:", "pragma: no cover"]
